--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -1463,6 +1463,7 @@
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
     <None Include="My Project\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="My Project\PublishProfiles\FolderProfile.pubxml" />
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <CustomToolNamespace>My</CustomToolNamespace>
@@ -1579,11 +1580,10 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <None Include="Views\Auth\login.vbhtml" />
+    <Content Include="Views\Auth\login.vbhtml" />
     <Content Include="Views\Auth\auth-recoverpw.cshtml" />
     <Content Include="Views\Auth\auth-register.cshtml" />
-    <Content Include="Views\AutoSuivi\Index.vbhtml" />
-    <None Include="Views\Dashboard\Index.vbhtml" />
+    <Content Include="Views\Dashboard\Index.vbhtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_boxed.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_colored_sidebar.cshtml" />
@@ -1593,16 +1593,16 @@
     <Content Include="Views\Shared\Layouts\_layout_light_sidebar.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_preloader.cshtml" />
     <Content Include="Views\Shared\_BlankLayout.cshtml" />
-    <None Include="Views\Shared\_footer.vbhtml" />
+    <Content Include="Views\Shared\_footer.vbhtml" />
     <Content Include="Views\Shared\_head_css.cshtml" />
     <Content Include="Views\Shared\_horizontal.cshtml" />
-    <None Include="Views\Shared\_Layout.vbhtml" />
-    <None Include="Views\Shared\_page_title.vbhtml" />
-    <None Include="Views\Shared\_right_sidebar.vbhtml" />
-    <None Include="Views\Shared\_sidebar.vbhtml" />
+    <Content Include="Views\Shared\_Layout.vbhtml" />
+    <Content Include="Views\Shared\_page_title.vbhtml" />
+    <Content Include="Views\Shared\_right_sidebar.vbhtml" />
+    <Content Include="Views\Shared\_sidebar.vbhtml" />
     <Content Include="Views\Shared\_title_meta.cshtml" />
-    <None Include="Views\Shared\_topbar.vbhtml" />
-    <None Include="Views\Shared\_vendor_scripts.vbhtml" />
+    <Content Include="Views\Shared\_topbar.vbhtml" />
+    <Content Include="Views\Shared\_vendor_scripts.vbhtml" />
     <Content Include="Views\Pages\pages-404.cshtml" />
     <Content Include="Views\Pages\pages-500.cshtml" />
     <Content Include="Views\Pages\pages-comingsoon.cshtml" />
@@ -1617,8 +1617,8 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Views\Home\Index.vbhtml" />
-    <None Include="Views\Sign\Check.vbhtml" />
-    <None Include="Views\Sign\Inactif.vbhtml" />
+    <Content Include="Views\Sign\Check.vbhtml" />
+    <Content Include="Views\Sign\Inactif.vbhtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.vbhtml" />
     <Content Include="Web.config" />
