--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -88,7 +88,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -274,6 +274,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Episode\EpisodeUtils.vb" />
+    <Compile Include="Form\EtatJournalier\FrmEtatJournalier.Designer.vb">
+      <DependentUpon>FrmEtatJournalier.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\EtatJournalier\FrmEtatJournalier.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\RendezVous\RadFListeIntervenantSansRDV.Designer.vb">
       <DependentUpon>RadFListeIntervenantSansRDV.vb</DependentUpon>
     </Compile>
@@ -995,6 +1001,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form\DRC\RadFAutoSuivi.resx">
       <DependentUpon>RadFAutoSuivi.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\EtatJournalier\FrmEtatJournalier.resx">
+      <DependentUpon>FrmEtatJournalier.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\RendezVous\RadFListeIntervenantSansRDV.resx">
       <DependentUpon>RadFListeIntervenantSansRDV.vb</DependentUpon>
