--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -1595,13 +1595,13 @@
     <Content Include="Views\Shared\Layouts\_layout_preloader.cshtml" />
     <None Include="Views\Shared\_BlankLayout.vbhtml" />
     <Content Include="Views\Shared\_footer.vbhtml" />
-    <None Include="Views\Shared\_head_css.vbhtml" />
+    <None Include="Views\Shared\_head_css.cshtml" />
     <None Include="Views\Shared\_horizontal.vbhtml" />
     <Content Include="Views\Shared\_Layout.vbhtml" />
     <Content Include="Views\Shared\_page_title.vbhtml" />
     <Content Include="Views\Shared\_right_sidebar.vbhtml" />
     <Content Include="Views\Shared\_sidebar.vbhtml" />
-    <None Include="Views\Shared\_title_meta.vbhtml" />
+    <None Include="Views\Shared\_title_meta.cshtml" />
     <Content Include="Views\Shared\_topbar.vbhtml" />
     <Content Include="Views\Shared\_vendor_scripts.vbhtml" />
     <Content Include="Views\Pages\pages-404.cshtml" />
