--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -19,12 +19,13 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <IsWebBootstrapper>true</IsWebBootstrapper>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <PublishUrl>C:\inetpub\wwwroot\clickonce\</PublishUrl>
+    <TargetFrameworkProfile />
+    <PublishUrl>ftp://ns3119889.ip-51-38-181.eu/</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
+    <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
@@ -32,17 +33,17 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <InstallUrl>https://ns3119889.ip-51-38-181.eu/clickonce/</InstallUrl>
     <UpdateUrl>http://ns3119889.ip-51-38-181.eu/clickonce/</UpdateUrl>
     <ProductName>Oasis</ProductName>
     <PublisherName>Synovora</PublisherName>
     <SuiteName>Oasis</SuiteName>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>53</ApplicationRevision>
+    <ApplicationRevision>122</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -270,6 +271,12 @@
       <DependentUpon>RadFAutoSuivi.vb</DependentUpon>
     </Compile>
     <Compile Include="Form\DRC\RadFAutoSuivi.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\DRC\RadFDrcAideEnLigne.Designer.vb">
+      <DependentUpon>RadFDrcAideEnLigne.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\DRC\RadFDrcAideEnLigne.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Episode\EpisodeUtils.vb" />
@@ -1000,6 +1007,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form\DRC\RadFAutoSuivi.resx">
       <DependentUpon>RadFAutoSuivi.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\DRC\RadFDrcAideEnLigne.resx">
+      <DependentUpon>RadFDrcAideEnLigne.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\EtatJournalier\FrmEtatJournalier.resx">
       <DependentUpon>FrmEtatJournalier.vb</DependentUpon>
